syntax = "proto3";
package binout.recycling;
option java_multiple_files = true;
option java_package = "binout.recycling";
option java_outer_classname = "RecyclingProto";

message WasteType {
  string type = 1;
}

message RecyclingTip {
  string tips = 1;
}

service RecyclingAdvisorService {
  rpc GetRecyclingTip(WasteType) returns (RecyclingTip);
}